<resources>
    <string name="app_name">JACOBSThierry AndroidProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">search</string>
    <string name="profile">Profile</string>
    <string name="discover_new_recipes">Discover new recipes !</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipicing elit. Sed non risus. Suspendiss lectus tortor</string>
    <string name="ingredients">Ingredients</string>
    <string name="action_search">Search</string>
    <string name="Removed">Removed from favorite</string>
    <string name="AddedToFav">Added to favorites</string>
    <string name="signin_cancelled">Sign in cancelled</string>
    <string name="no_internet">No Internet connection</string>
    <string name="ue">Unknown error</string>
    <string name="log_out">Log out</string>
    <string name="Recipe">Recipe</string>
    <string name="Comments">Comments</string>
    <string name="add_a_comment">add a comment</string>
    <string name="subbmit">Subbmit</string>
    <string name="Hi">\"Hi \"</string>
</resources>