<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/favorite_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Favorite"
            android:textSize="30sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoriteRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/favorite_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



